[package]
name = "midi_ma"
version = "0.1.0"
edition = "2021"

[dependencies]
midir = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.20.1", features = ["full"] }
tokio-tungstenite = "*"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
url = "2.2.2"
futures-channel = "0.3.21"
